# promise

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh
cmake/: FindABC.cmake  FindYosys.cmake
experiments/: .gitignore  CMakeLists.txt
experiments/iccad25-promise/: .gitignore  CMakeLists.txt  README.md  compile_benchmarks.sh  env.sh  report.py  run.sh
experiments/iccad25-promise/benchmarks/: CMakeLists.txt
experiments/iccad25-promise/benchmarks/dynamatic_bicg/hdl/: bicg.v  bicg_wrapper.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_factorial/hdl/: factorial.v  factorial_wrapper.v  handshake_constant_0.v  handshake_constant_1.v  handshake_constant_2.v  handshake_constant_3.v  handshake_constant_4.v  handshake_constant_5.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_gaussian/hdl/: gaussian.v  gaussian_wrapper.v  handshake_constant_2.v  handshake_constant_3.v  handshake_constant_4.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_gemver/hdl/: gemver.v  gemver_wrapper.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_iterative_division/hdl/: handshake_cmpi_0.v  handshake_cmpi_1.v  handshake_cmpi_2.v  handshake_cmpi_3.v  handshake_cmpi_4.v  handshake_constant_2.v  handshake_constant_3.v  iterative_division.v  iterative_division_wrapper.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_iterative_sqrt/hdl/: handshake_cmpi_0.v  handshake_cmpi_1.v  handshake_cmpi_2.v  handshake_cmpi_3.v  handshake_constant_1.v  handshake_constant_3.v  iterative_sqrt.v  iterative_sqrt_wrapper.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_kernel_2mm/hdl/: handshake_constant_3.v  kernel_2mm.v  kernel_2mm_wrapper.v  main.v
experiments/iccad25-promise/benchmarks/dynamatic_matvec/hdl/: handshake_constant_1.v  main.v  matvec.v  matvec_wrapper.v
experiments/iccad25-promise/benchmarks/dynamatic_simple_loop/hdl/: handshake_constant_0.v  handshake_constant_1.v  simple.v  simple_wrapper.v
experiments/iccad25-promise/benchmarks/dynamatic_stencil_2d/hdl/: main.v  stencil_2d.v  stencil_2d_wrapper.v
experiments/iccad25-promise/benchmarks/xls_factorial/: CMakeLists.txt
experiments/iccad25-promise/benchmarks/xls_factorial/hdl/: factorial.v
experiments/iccad25-promise/benchmarks/xls_iterative_division/hdl/: iterative_division.v
experiments/iccad25-promise/benchmarks/xls_iterative_sqrt/hdl/: iterative_sqrt.v  main.v
experiments/iccad25-promise/benchmarks/xls_simple_loop/hdl/: simple_loop.v
experiments/iccad25-promise/compile_benchmarks/dynamatic_bicg/: bicg.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_factorial/: factorial.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_gaussian/: gaussian.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_gemver/: gemver.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_iterative_division/: iterative_division.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_iterative_sqrt/: iterative_sqrt.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_kernel_2mm/: kernel_2mm.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_matvec/: matvec.c
experiments/iccad25-promise/compile_benchmarks/dynamatic_simple_loop/: main.v  run.sh  simple.mlir  tb_round_0.v
experiments/iccad25-promise/compile_benchmarks/dynamatic_stencil_2d/: stencil_2d.c
experiments/iccad25-promise/compile_benchmarks/xls_factorial/: factorial.x  main.v  tb_round_0.v
experiments/iccad25-promise/compile_benchmarks/xls_iterative_division/: channel_values  iterative_division.x  main.v  mytb.v
experiments/iccad25-promise/compile_benchmarks/xls_iterative_sqrt/: iterative_sqrt.x
experiments/iccad25-promise/compile_benchmarks/xls_simple_loop/: main.v  simple_loop.x  tb_round_0.v
experiments/iccad25-promise/src/: CMakeLists.txt  Iccad25Experiment.cpp  Iccad25Experiment.h  depth.cpp  techniques.cpp
experiments/iccad25-promise/utils/: dynamatic_cosim.sh  dynamatic_pipeline.sh  xls_pipeline.sh
ext/: .gitignore
include/promise/: AbcCommands.h  Invariants.h  LinearAlgebra.h  ModelCheckingResult.h  ShellUtils.h  StringUtils.h  Timer.h  VerilatorUtils.h
include/promise/RTLIL/: EncodingOptimization.h  EquipInvariants.h  RTLILUtils.h
include/promise/Simulation/: VcdParser.h
lib/: AbcCommands.cpp  CMakeLists.txt  Invariants.cpp  LinearAlgebra.cpp  ModelCheckingResult.cpp  VcdParser.cpp  VerilatorUtils.cpp
lib/RTLIL/: EncodingOptimization.cpp  EquipInvariants.cpp  RTLILUtils.cpp
lib/Simulation/: VcdParser.cpp  VerilatorUtils.cpp
test/: CMakeLists.txt
test/gcd2/: CMakeLists.txt
test/gcd2/hdl/: FIFO2.v  main.v  mkGCD2.v  mkGCDGuarded.v
test/onehot/: CMakeLists.txt
test/onehot/hdl/: main.v
test/reconvergent/: CMakeLists.txt
test/reconvergent/hdl/: main.v
tools/: CMakeLists.txt
tools/promise/: CMakeLists.txt  SynthesisFlow.cpp  SynthesisFlow.h  promise.cpp  test.cpp
